<resources>
    <string name="app_name" translatable="false">Flicksbox</string>
    <string name="textview_email" translatable="false">Email</string>
    <string name="textview_password">Password</string>
    <string name="auth_textview_title">Authorization</string>
    <string name="auth_button_login">Log In</string>
    <string name="auth_textview_have_not_registered_yet">Have not registered yet?</string>
    <string name="auth_textview_register"><u>Registration</u></string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="old_password">Old password</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password_btn">Change password</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_status">Status</string>
    <string name="subscription_status_no_sub">No subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="registration_TextView_title">Registration</string>
    <string name="registration_TextView_username">Login</string>
    <string name="registration_TextView_repeatPassword">Repeat password</string>
    <string name="registration_Button_register">Register</string>
    <string name="registration_TextView_haveAlreadyRegistered">Have already registered?</string>
    <string name="registration_TextView_logIn"><u>Log In</u></string>
    <string name="login_TextView_title">Auth</string>
    <string name="login_Button_login">Log In</string>
    <string name="login_TextView_haveNotRegisteredYet">Have not registered yet?</string>
    <string name="auth_required_fields_empty_error">Required fields are empty</string>
    <string name="unknown_server_error">Unknown server error</string>
    <string name="auth_email_incorrect_error">Email is incorrect</string>
    <string name="reg_password_incorrect_error">Password must be at least 6 characters</string>
    <string name="reg_repeated_password_incorrect_error">Password mismatch</string>
    <string name="profile_password_changed">Password changed</string>
    <string name="profile_data_changed">Data changed</string>
    <string name="content_title">Pulp Fiction</string>
    <string name="content_director">Quentin Tarantino</string>

    <string name="nav_btn_home">Home</string>
    <string name="nav_btn_my_list">My List</string>
    <string name="nav_btn_movie">Movie</string>
    <string name="nav_btn_tv_show">TV Show</string>

    <string name="preview_play_btn">Play</string>
    <string name="preview_info_btn">Info</string>

    <string name="content_top">Top content</string>
    <string name="content_new">New</string>

    <string name="title_main">Main</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="favourites_not_authed">To watch favourites you need to log in first.</string>

    <string name="profile_logout_button">Log out</string>

    <string name="single_movie_description">Description:</string>
    <string name="single_movie_country">Country:</string>
    <string name="single_movie_genres">Genre:</string>
    <string name="single_movie_actors">Actors:</string>
    <string name="search_sort_year_button">By year</string>
    <string name="search_sort_rating_button">By rating</string>
    <string name="title_search">Search</string>
    <string name="not_authorized_message">You are not logged in, please login to see favourites</string>
</resources>