<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:fontFamily="@font/gilroy_f"
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home"
        android:title="@string/title_main" />

    <item
        android:fontFamily="@font/gilroy_f"
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:fontFamily="@font/gilroy_f"
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_saved"
        android:title="@string/title_favourites" />

    <item
        android:fontFamily="@font/gilroy_f"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>