<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.bottomnavbartest.ui.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.bottomnavbartest.ui.dashboard.DashboardFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bottomnavbartest.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment>

    </fragment>
</navigation>