<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_movie_description"
        android:textColor="@color/white"
        android:textSize="@dimen/font_m"
        android:textStyle="bold"
        android:paddingBottom="@dimen/margin_label_bottom_s"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

    <TextView
        android:id="@+id/single_movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_s"
        android:paddingBottom="@dimen/margin_bottom"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_bottom">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_movie_country"
        android:textColor="@color/white"
        android:textSize="@dimen/font_m"

        android:textStyle="bold"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

    <TextView
        android:id="@+id/single_movie_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_s"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_movie_genres"
        android:textColor="@color/white"
        android:textSize="@dimen/font_m"
        android:textStyle="bold"
        android:paddingBottom="@dimen/margin_label_bottom_s"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

    <TextView
        android:id="@+id/single_movie_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_s"
        android:paddingBottom="@dimen/margin_bottom"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_movie_actors"
        android:textColor="@color/white"
        android:textSize="@dimen/font_m"
        android:textStyle="bold"
        android:paddingBottom="@dimen/margin_label_bottom_s"
        android:fontFamily="@font/gilroy_f"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

    <TextView
        android:id="@+id/single_movie_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_f"
        android:textSize="@dimen/font_s"
        android:layout_marginStart="@dimen/margin_start_s"
        android:layout_marginEnd="@dimen/margin_start_s"/>

</LinearLayout>
