<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_bar"
    android:layout_width="fill_parent"
    android:layout_height="65dp"
    android:layout_alignParentBottom="true"
    android:background="@color/main"
    android:gravity="center"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:id="@+id/content_buttons_wrapper"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/content_button_play"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/nav_btn"
                android:src="@drawable/ic_home" />
            <TextView
                android:id="@+id/content_title_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_btn_home"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xs" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/content_button_add"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/nav_btn"
                android:src="@drawable/ic_movie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_btn_movie"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/content_button_like"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/nav_btn"
                android:src="@drawable/ic_tv_show" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_btn_tv_show"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/content_button_dislike"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/nav_btn"
                android:src="@drawable/ic_saved" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_btn_my_list"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xs" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>